lab3/tmp-078-correct-stderr.txt
cc1: warning: /dev/null: not a directory [enabled by default]
cc1: warning: /dev/null: not a directory [enabled by default]
In file included from tf4.c:2:0:
s2_header.h:1:25: error: expected ‘,’ or ‘;’ before ‘ready’
 static char *s2 = "I'm "ready" now";
                         ^
Command failed.  Exiting
